# tools-plugin_manager

./: CMakeLists.txt  README.md  manifest.xml
cmake/: PluginManager.cmake  pluginmanager-config.cmake.in
src/: CMakeLists.txt  Demangle.cpp  Demangle.hpp  Dummy.cpp  Dummy.hpp  Exceptions.hpp  Main.cpp  PluginInfo.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  plugin_manager.pc.in
test/: CMakeLists.txt  test_Dummy.cpp  test_PluginLoader.cpp  test_PluginManager.cpp
test/plugin_loader_data/: BaseClass.hpp  FloatPlugin.cpp  FloatPlugin.hpp  StringPlugin.cpp  StringPlugin.hpp  plugins.xml
test/plugin_manager_data/: string_plugin.xml  vector_plugin.xml
